unpackaged/main/default/objects/Focus_Point__c/Focus_Point__c.object-meta.xml
<CustomObject>
    <label>Focus Point</label>
    <nameField>
        <label>Focus Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Focus Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>