unpackaged/main/default/objects/Focus_Point__c/fields/Focus_Point_Change__c.field-meta.xml
<CustomField>
    <fullName>Focus_Point_Change__c</fullName>
    <label>Focus Point Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happy to Unhappy</fullName>
            </value>
            <value>
                <fullName>Happy to Neutral</fullName>
            </value>
            <value>
                <fullName>Neutral to Happy</fullName>
            </value>
            <value>
                <fullName>Neutral to Unhappy</fullName>
            </value>
            <value>
                <fullName>Unhappy to Happy</fullName>
            </value>
            <value>
                <fullName>Unhappy to Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>