unpackaged/main/default/objects/Focus_Point__c/fields/Happy__c.field-meta.xml
<CustomField>
    <fullName>Happy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Happy</label>
    <type>Checkbox</type>
</CustomField>