unpackaged/main/default/objects/Focus_Point__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WorkStream</valueSetName>
    </valueSet>
</CustomField>