unpackaged/main/default/objects/Focus_Point__c/fields/Level_of_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Satisfaction__c</fullName>
    <formula>IF(Happy__c = TRUE, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000006yh1J&quot;, &quot;Happy&quot;,19,19),
IF(Neutral__c = TRUE, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000006yh1T&quot;, &quot;Neutral&quot;,19,19),
IF(Sad__c = TRUE, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000006yh1Y&quot;, &quot;Unhappy&quot;,19,19),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000006yh1n&quot;, &quot;Unknown&quot;,19, 19))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level of Satisfaction</label>
    <type>Text</type>
</CustomField>