unpackaged/main/default/objects/Focus_Point__c/fields/Merchant_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>Focus Points</relationshipLabel>
    <relationshipName>Focus_Points</relationshipName>
    <type>Lookup</type>
</CustomField>