unpackaged/main/default/objects/Focus_Point__c/fields/Neutral__c.field-meta.xml
<CustomField>
    <fullName>Neutral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neutral</label>
    <type>Checkbox</type>
</CustomField>