unpackaged/main/default/objects/Focus_Point__c/fields/Notes_Action_Points__c.field-meta.xml
<CustomField>
    <fullName>Notes_Action_Points__c</fullName>
    <label>Notes/Action Points</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>