unpackaged/main/default/objects/Focus_Point__c/fields/Owning_Country__c.field-meta.xml
<CustomField>
    <fullName>Owning_Country__c</fullName>
    <formula>TEXT(Account__r.Owning_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owning Country</label>
    <type>Text</type>
</CustomField>