unpackaged/main/default/objects/Focus_Point__c/fields/Parent_Merchant_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Merchant_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Merchant Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>Focus Points (Parent Merchant Account Plan)</relationshipLabel>
    <relationshipName>Focus_Points1</relationshipName>
    <type>Lookup</type>
</CustomField>