unpackaged/main/default/objects/Focus_Point__c/fields/Sad__c.field-meta.xml
<CustomField>
    <fullName>Sad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unhappy</label>
    <type>Checkbox</type>
</CustomField>