unpackaged/main/default/objects/Focus_Point__c/fields/Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction__c</fullName>
    <formula>IF(Happy__c = TRUE, &quot;Happy&quot;,
IF(Neutral__c = TRUE, &quot;Neutral&quot;,
IF(Sad__c = TRUE, &quot;Unhappy&quot;, &quot;Unknown&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Satisfaction</label>
    <type>Text</type>
</CustomField>