unpackaged/main/default/objects/Focus_Point__c/fields/This_Year__c.field-meta.xml
<CustomField>
    <fullName>This_Year__c</fullName>
    <formula>IF(YEAR(DATEVALUE(CreatedDate)) = YEAR(DATEVALUE(NOW())), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year</label>
    <type>Text</type>
</CustomField>