unpackaged/main/default/objects/Focus_Point__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <label>Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_Workstream</valueSetName>
    </valueSet>
</CustomField>