unpackaged/main/default/objects/Focus_Point__c/fields/Workstream_Type__c.field-meta.xml
<CustomField>
    <fullName>Workstream_Type__c</fullName>
    <label>Workstream Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Workstream__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Workstream_Type</valueSetName>
    </valueSet>
</CustomField>