unpackaged/main/default/objects/Focus_Point__c/recordTypes/Focus_Point.recordType-meta.xml
<RecordType>
    <fullName>Focus_Point</fullName>
    <active>true</active>
    <label>Focus Point</label>
</RecordType>