unpackaged/main/default/objects/Focus_Point__c/recordTypes/Focus_Point_New.recordType-meta.xml
<RecordType>
    <fullName>Focus_Point_New</fullName>
    <active>true</active>
    <label>Focus Point New</label>
</RecordType>