unpackaged/main/default/objects/Focus_Point__c/validationRules/Focus_Point_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Focus_Point_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Name),$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You may not change the name of a Focus Point.</errorMessage>
</ValidationRule>