unpackaged/main/default/objects/Focus_Point__c/validationRules/More_Than_One_Satisfaction_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>More_Than_One_Satisfaction_Level</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(Happy__c = TRUE,  Neutral__c = TRUE), AND(Happy__c = TRUE,  Sad__c = TRUE), AND(Neutral__c = TRUE, Sad__c = TRUE))</errorConditionFormula>
    <errorMessage>A Focus Point can only have one level of satisfaction.  Please select only one.</errorMessage>
</ValidationRule>