unpackaged/main/default/objects/Focus_Point__c/validationRules/Parent_Account_Plan_Same_as_Account_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Account_Plan_Same_as_Account_Plan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Merchant_Account_Plan__c &lt;&gt; &quot;&quot;, Merchant_Account_Plan__c = Parent_Merchant_Account_Plan__c)</errorConditionFormula>
    <errorDisplayField>Parent_Merchant_Account_Plan__c</errorDisplayField>
    <errorMessage>Please enter the correct Parent Account Plan</errorMessage>
</ValidationRule>