unpackaged/main/default/objects/Focus_Point__c/validationRules/Satisfaction_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Satisfaction_Level</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Happy__c = FALSE,  Neutral__c = FALSE,  Sad__c = FALSE)</errorConditionFormula>
    <errorMessage>You must indicate the level of satisfaction.</errorMessage>
</ValidationRule>