unpackaged/main/default/objects/Focus_Point__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Interest__c</columns>
    <columns>Workstream__c</columns>
    <columns>Workstream_Type__c</columns>
    <columns>Level_of_Satisfaction__c</columns>
    <columns>Notes_Action_Points__c</columns>
    <columns>Category__c</columns>
    <columns>Account_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Owning_Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>